# brag_book

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
data/: eora_brag_scraper.py
data/knowledge_base/: general_summary.txt
data/processed/: knowledge_base_chunks.json
data/raw/: eora_cases.csv
src/: main_cli.py
src/ai_engine/: generator.py  orchestrator.py  query_router.py  retriever.py  translator.py
src/core/: base_paths.py  config.py  models.py
src/preparation/: 01_scrape_and_enrich.py  02_generate_summary.py  03_build_vector_store.py
