[project]
name = "brag-book"
version = "0.1.0"
description = "EORA AI brag book"
authors = [
    {name = "dmvaled",email = "dmvaled@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "chromadb (>=1.0.16,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (<2.0.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "openai (>=1.99.9,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "safetensors (>=0.6.2,<0.7.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "torch (==2.2.2)",
    "transformers (>=4.55.2,<5.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pre-commit = "^4.0.1"
mypy = "^1.17.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "B", "Q"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = false
force-sort-within-sections = true
lines-after-imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
